# shell

./: .gitignore  convention.md  convention.txt  keqing-shell  setup
plugins/: CMakeLists.txt
plugins/matrix/: CMakeLists.txt  matrixgrid.cpp  matrixgrid.hpp
plugins/visualizer/: CMakeLists.txt  pocketfft_hdronly.h  pwspectrum.cpp  pwspectrum.hpp  visualiserbars.cpp  visualiserbars.hpp
scripts/: apply-colors
src/: shell.qml
src/components/: AnimatedRegion.qml  ArcGauge.qml  Chip.qml  Divider.qml  MarqueeText.qml  PanelRect.qml  PasswordInput.qml  RoundImage.qml  SliderBar.qml  Space.qml  StaticRegion.qml  Toggle.qml
src/config/: ColorConfig.qml  FontConfig.qml  GlobalConfig.qml  IconConfig.qml
src/lib/layout/: ArcGauge.qml  Chip.qml  Divider.qml  MarqueeText.qml  PanelRect.qml  PasswordInput.qml  RoundImage.qml  SliderBar.qml  Toggle.qml
src/lib/service/: ColorSchemeService.qml  DisplayService.qml  NotificationService.qml  SettingsService.qml  WallpaperService.qml
src/modules/bar/: Bar.qml  BarConfig.qml
src/modules/controlcenter/: ControlCenter.qml  ControlCenterConfig.qml
src/modules/core/: ModuleHandler.qml  ModuleLoader.qml  ModuleStates.qml
src/modules/dock/: Dock.qml  DockConfig.qml  DockWidget.qml
src/modules/idle/: Idle.qml  IdleConfig.qml
src/modules/launcher/: Launcher.qml  LauncherConfig.qml
src/modules/lock/: Lock.qml  LockConfig.qml  pam.conf
src/modules/logout/: Logout.qml  LogoutButton.qml  LogoutConfig.qml
src/modules/matrix/: Matrix.qml  MatrixConfig.qml
src/modules/osd/: OSD.qml  (+2 more)
src/service/: BatteryService.qml  BluetoothService.qml  ColorSchemeService.qml  DateTimeService.qml  DisplayService.qml  DockService.qml  HyprlandService.qml  IdleService.qml  LockService.qml  MediaService.qml  NetworkService.qml  NotificationService.qml  SettingsService.qml  SystemStatService.qml  VolumeService.qml  WallpaperService.qml
src/styles/: ColorConfig.qml  FontConfig.qml  GlobalConfig.qml  IconConfig.qml
templates/: btop.theme.tmpl  cava.conf.tmpl  fastfetch.jsonc.tmpl  kitty.conf.tmpl  starship.toml.tmpl  vesktop.css.tmpl  yazi-flavor.toml.tmpl  zsh-colors.zsh.tmpl
(+135 files in other folders)
